# Reconstructor

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Correction.cpp  Correction.hpp  Image.cpp  Image.hpp  Model.cpp  Model.hpp  README.md  SfIS.cpp  SfIS.hpp  Triangle.hpp  Type.hpp  Uniform.cpp  Uniform.hpp  Util.hpp  Vertex.hpp  Voxel.hpp  iodata.cpp  iodata.hpp  main.cpp
Data/: voxel_config.txt
